Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
Qt Creator 4.4.0-rc1
-
None
-
b9167a192f99940a30aca5d8dbb69207c90d2fc7
Description
- Create a new Qt Quick Application project using defaults.
- Remove the qml files from the resource file qml.qrc.
The resource file will disappear from the Projects view.
It might make sense to hide the now empty prefix inside the resource file but I think the resource file itself should still be shown because it still is a part of the project. Not showing the file will make it harder to add files to the resource file again.
This used to work correctly in 4.4 beta before ea867cd49a113aa802ad007db784c50b16475377:
ea867cd49a113aa802ad007db784c50b16475377 is the first bad commit commit ea867cd49a113aa802ad007db784c50b16475377 Author: Tobias Hunger <tobias.hunger@qt.io> Date: Wed Aug 2 17:02:02 2017 +0200 ProjectExplorer: Add option to hide empty directories from project tree Together with the earlier fix for hiding generated files, this change makes for a very clean CMake server-mode project tree:-) Change-Id: Ib70fd66699eddf5d6e602f3f8848b31fd6d85b57 Reviewed-by: André Hartmann <aha_1980@gmx.de> Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Found by Squish test tst_openqt_creator and others.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-22737 [REG 4.9.2 -> 4.10] Projects view does not show empty resource files
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18748 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
202817,3 | ProjectExplorer: Don't hide empty resource files like empty directories | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |